--- a/BrendanCUDA.vcxproj.filters
+++ b/BrendanCUDA.vcxproj.filters
@@ -86,6 +86,7 @@
     <ClInclude Include="brendancuda_ai_mlp_fixedmlp.h">
       <Filter>AI\MLP</Filter>
     </ClInclude>
+    <ClInclude Include="brendancuda_arrays.h" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="brendancuda_ai_mlpb_mlpbls.h.tt">
