--- a/BrendanCUDA.vcxproj
+++ b/BrendanCUDA.vcxproj
@@ -106,6 +106,7 @@
     <ClInclude Include="brendancuda_fields_instance2.h" />
     <ClInclude Include="brendancuda_fields_instance3.h" />
     <ClInclude Include="brendancuda_ai_mlp_fixedmlp.h" />
+    <ClInclude Include="brendancuda_kernellaunch.cuh" />
     <ClInclude Include="brendancuda_nets_makenet.h" />
     <ClInclude Include="brendancuda_points.h" />
     <CustomBuild Include="brendancuda_points.h.tt">
