--- a/BrendanCUDA.vcxproj
+++ b/BrendanCUDA.vcxproj
@@ -100,6 +100,7 @@
     <ClInclude Include="brendancuda_ai_evol_eval_output_impl_uniquevalues.h" />
     <ClInclude Include="brendancuda_arrays.h" />
     <ClInclude Include="brendancuda_crossassigns.h" />
+    <ClInclude Include="brendancuda_cudaconstexpr.h" />
     <ClInclude Include="brendancuda_errorhelp.h" />
     <ClInclude Include="brendancuda_fields_dfield2.cuh" />
     <ClInclude Include="brendancuda_fields_field2.cuh" />
