--- a/BrendanCUDA.vcxproj
+++ b/BrendanCUDA.vcxproj
@@ -121,6 +121,7 @@
     <ClInclude Include="brendancuda_ai_evol_evolver.h" />
     <ClInclude Include="brendancuda_fields_field3.cuh" />
     <ClInclude Include="brendancuda_ai_genetics_genemlp.h" />
+    <ClInclude Include="brendancuda_rand_randomizer.h" />
     <ClInclude Include="brendancuda_rand_sseed.cuh" />
     <ClInclude Include="brendancuda_ai_mlp.h" />
     <ClInclude Include="brendancuda_ai_mlpb.h" />
