Added brendancuda_allheaders.* duo

--- a/BrendanCUDA.vcxproj.filters
+++ b/BrendanCUDA.vcxproj.filters
@@ -95,6 +95,8 @@
     <ClInclude Include="brendancuda_rand_randomizer.h">
       <Filter>Random</Filter>
     </ClInclude>
+    <ClInclude Include="brendancuda_allheaders.h" />
+    <ClInclude Include="brendancuda_allheaders.cuh" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Fields">
