--- a/BrendanCUDA.vcxproj
+++ b/BrendanCUDA.vcxproj
@@ -126,8 +126,8 @@
     <ClInclude Include="brendancuda_ai_genetics_genemlp.h" />
     <ClInclude Include="brendancuda_rand_randomizer.h" />
     <ClInclude Include="brendancuda_rand_sseed.cuh" />
-    <ClInclude Include="brendancuda_ai_mlp.h" />
-    <ClInclude Include="brendancuda_ai_mlpb.h" />
+    <ClInclude Include="brendancuda_ai_mlp_mlp.h" />
+    <ClInclude Include="brendancuda_ai_mlpb_mlpb.h" />
     <ClInclude Include="brendancuda_ai_mlpb_mlpblw.h" />
     <ClInclude Include="brendancuda_ai_mlpb_mlpbl.h" />
     <ClInclude Include="brendancuda_ai_mlp_mlpl.h" />
@@ -139,7 +139,7 @@
       <FileType>CppCode</FileType>
     </CudaCompile>
     <ClCompile Include="brendancuda_ai_genetics_genemlp.cpp" />
-    <CudaCompile Include="brendancuda_ai_mlp.cu" />
+    <CudaCompile Include="brendancuda_ai_mlp_mlp.cu" />
     <CudaCompile Include="brendancuda_ai_mlpb_mlpblw.cu" />
     <CudaCompile Include="brendancuda_ai_mlp_mlpl.cu" />
     <CudaCompile Include="brendancuda_binary_basic.cu" />
