--- a/BrendanCUDA.vcxproj
+++ b/BrendanCUDA.vcxproj
@@ -102,6 +102,7 @@
     <ClInclude Include="brendancuda_allheaders.cuh" />
     <ClInclude Include="brendancuda_allheaders.h" />
     <ClInclude Include="brendancuda_arrays.h" />
+    <ClInclude Include="brendancuda_copyblock.h" />
     <ClInclude Include="brendancuda_crossassigns.h" />
     <ClInclude Include="brendancuda_cudaconstexpr.h" />
     <ClInclude Include="brendancuda_errorhelp.h" />
