--- a/BrendanCUDA.vcxproj.filters
+++ b/BrendanCUDA.vcxproj.filters
@@ -97,6 +97,7 @@
     </ClInclude>
     <ClInclude Include="brendancuda_allheaders.h" />
     <ClInclude Include="brendancuda_allheaders.cuh" />
+    <ClInclude Include="brendancuda_copyblock.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Fields">
