--- a/BrendanCUDA.vcxproj.filters
+++ b/BrendanCUDA.vcxproj.filters
@@ -11,7 +11,7 @@
     <ClInclude Include="brendancuda_ai_mlpb_mlpbl.h">
       <Filter>AI\MLPB</Filter>
     </ClInclude>
-    <ClInclude Include="brendancuda_fields_field3.cuh">
+    <ClInclude Include="brendancuda_fields_field3.h">
       <Filter>Fields</Filter>
     </ClInclude>
     <ClInclude Include="brendancuda_ai_evol_evolver.h">
@@ -29,7 +29,7 @@
     <ClInclude Include="brendancuda_ai.h">
       <Filter>AI</Filter>
     </ClInclude>
-    <ClInclude Include="brendancuda_fields_dfield3.cuh">
+    <ClInclude Include="brendancuda_fields_dfield3.h">
       <Filter>Fields</Filter>
     </ClInclude>
     <ClInclude Include="brendancuda_rand_drandom.cuh">
@@ -67,10 +67,10 @@
     <ClInclude Include="brendancuda_ai_evol_eval_output_impl_uniquevalues.h">
       <Filter>AI\Evolution\Evaluation\Output</Filter>
     </ClInclude>
-    <ClInclude Include="brendancuda_fields_field2.cuh">
+    <ClInclude Include="brendancuda_fields_field2.h">
       <Filter>Fields</Filter>
     </ClInclude>
-    <ClInclude Include="brendancuda_fields_dfield2.cuh">
+    <ClInclude Include="brendancuda_fields_dfield2.h">
       <Filter>Fields</Filter>
     </ClInclude>
     <ClInclude Include="brendancuda_points.h" />
@@ -161,6 +161,12 @@
     <CudaCompile Include="brendancuda_errorhelp.cpp" />
     <CudaCompile Include="brendancuda_nets_makenet.cu">
       <Filter>Nets</Filter>
+    </CudaCompile>
+    <CudaCompile Include="brendancuda_fields_field3.cu">
+      <Filter>Fields</Filter>
+    </CudaCompile>
+    <CudaCompile Include="brendancuda_fields_field2.cu">
+      <Filter>Fields</Filter>
     </CudaCompile>
   </ItemGroup>
   <ItemGroup>
