--- a/BrendanCUDA.vcxproj
+++ b/BrendanCUDA.vcxproj
@@ -126,7 +126,7 @@
     <ClInclude Include="brendancuda_fields_field3.h" />
     <ClInclude Include="brendancuda_ai_genetics_genemlp.h" />
     <ClInclude Include="brendancuda_rand_randomizer.h" />
-    <ClInclude Include="brendancuda_rand_sseed.cuh" />
+    <ClInclude Include="brendancuda_rand_sseed.h" />
     <ClInclude Include="brendancuda_ai_mlp_mlp.h" />
     <ClInclude Include="brendancuda_ai_mlpb_mlpb.h" />
     <ClInclude Include="brendancuda_ai_mlpb_mlpblw.h" />
