Moved kernel and kernel call out of .h header

--- a/BrendanCUDA.vcxproj
+++ b/BrendanCUDA.vcxproj
@@ -141,6 +141,7 @@
       <FileType>CppCode</FileType>
     </CudaCompile>
     <ClCompile Include="brendancuda_ai_genetics_genemlp.cpp" />
+    <CudaCompile Include="brendancuda_ai_mlpb_mlpbl.cu" />
     <CudaCompile Include="brendancuda_ai_mlp_mlp.cu" />
     <CudaCompile Include="brendancuda_ai_mlpb_mlpblw.cu" />
     <CudaCompile Include="brendancuda_binary_basic.cu" />
