--- a/BrendanCUDA.vcxproj.filters
+++ b/BrendanCUDA.vcxproj.filters
@@ -168,6 +168,9 @@
     <CudaCompile Include="brendancuda_fields_field2.cu">
       <Filter>Fields</Filter>
     </CudaCompile>
+    <CudaCompile Include="brendancuda_ai_mlpb_mlpbl.cu">
+      <Filter>AI\MLPB</Filter>
+    </CudaCompile>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="brendancuda_ai_evol_eval_output_impl_proliferation.cpp">
