--- a/BrendanCUDA.vcxproj
+++ b/BrendanCUDA.vcxproj
@@ -105,6 +105,7 @@
     <ClInclude Include="brendancuda_copyblock.h" />
     <ClInclude Include="brendancuda_crossassigns.h" />
     <ClInclude Include="brendancuda_cudaconstexpr.h" />
+    <ClInclude Include="brendancuda_details_fillwith.h" />
     <ClInclude Include="brendancuda_errorhelp.h" />
     <ClInclude Include="brendancuda_fields_dfield2.h" />
     <ClInclude Include="brendancuda_fields_field2.h" />
@@ -145,6 +146,7 @@
     <CudaCompile Include="brendancuda_ai_mlp_mlp.cu" />
     <CudaCompile Include="brendancuda_ai_mlpb_mlpblw.cu" />
     <CudaCompile Include="brendancuda_binary_basic.cu" />
+    <CudaCompile Include="brendancuda_details_fillwith.cu" />
     <CudaCompile Include="brendancuda_errorhelp.cpp" />
     <CudaCompile Include="brendancuda_dcopy.cu" />
     <CudaCompile Include="brendancuda_fields_field2.cu" />
