--- a/BrendanCUDA.vcxproj
+++ b/BrendanCUDA.vcxproj
@@ -127,7 +127,7 @@
     <ClInclude Include="brendancuda_fields_field3.h" />
     <ClInclude Include="brendancuda_ai_genetics_genemlp.h" />
     <ClInclude Include="brendancuda_rand_randomizer.h" />
-    <ClInclude Include="brendancuda_rand_sseed.h" />
+    <ClInclude Include="brendancuda_threadid.cuh" />
     <ClInclude Include="brendancuda_ai_mlp_mlp.h" />
     <ClInclude Include="brendancuda_ai_mlpb_mlpb.h" />
     <ClInclude Include="brendancuda_ai_mlpb_mlpblw.h" />
@@ -153,7 +153,6 @@
     <CudaCompile Include="brendancuda_nets_net.cu" />
     <CudaCompile Include="brendancuda_rand_bits.cu" />
     <CudaCompile Include="brendancuda_rand_drandom.cu" />
-    <CudaCompile Include="brendancuda_rand_sseed.cu" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="brendancuda_ai_evol_eval_output_impl_proliferation.cpp" />
